--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 	<div class="wrapper">
 		<p>
 			<span class="description">Введите стоимость продукта</span>
-			<input class="input qwe" id="text1" name="input" type="text" value="" placeholder="100 рублей">
+			<input class="input qwe" id="text1" name="input" type="number" value="" placeholder="100 рублей">
 		</p>
 		<p>
 			<span class="description">Введите единицу продукта</span>
-			<input class="input kjs" id="text2" name="input" type="text" value="" placeholder="10 штук">
+			<input class="input kjs" id="text2" name="input" type="number" value="" placeholder="10 штук">
 		</p>
 		<p class="summ"></p>
 		<button class="button" type="submit" name="input">ok!</button>
